--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 body{
     padding: 0;
     margin: 0;
-   color:#383838;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:#383838;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #cookie-alert{
     width: 100%;
@@ -23,6 +23,21 @@ body{
     font-size: 10px;
     cursor: pointer;
 }
+.expand{
+    width: 100%;
+    text-decoration: none;
+    color:green;
+    font-size: 8px;
+}
+.clear{
+    clear:both;
+}
+.fleft{
+float: left;
+}
+.fright {
+    float: right;
+}
 #food-wrapper{
     position: relative;
     width: 100%;
@@ -37,14 +52,16 @@ body{
     background: green;
 }
 #food-footer,#food-header{
- height: 7%;
+    height: 7%;
 }
+
 #food-content{
-width: 100%;
-height: 86%;
-background: #fff;
-overflow-y: auto;
-overflow-x: hidden;
+    width: 100%;
+    height: 86%;
+    background: #fff;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding:20px 0;
 }
 
 .btn{
@@ -56,49 +73,73 @@ overflow-x: hidden;
     color:#f8f8f8;
     cursor: pointer;
 }
+
 .btn-md{
-border:none;
-outline: 0;
-padding: 10px 30px;
-background: green;
-border-radius: 15px;
-color:#f8f8f8;
-cursor: pointer;
+    border:none;
+    outline: 0;
+    padding: 10px 30px;
+    background: green;
+    border-radius: 15px;
+    color:#f8f8f8;
+    cursor: pointer;
 }
+
 .btn-lg{
-border:none;
-outline: 0;
-padding: 15px 40px;
-background: green;
-border-radius: 20px;
-color:#e98686;
-cursor: pointer;
+    border:none;
+    outline: 0;
+    padding: 15px 40px;
+    background: green;
+    border-radius: 20px;
+    color:#e98686;
+    cursor: pointer;
+}
+
+@media screen and (max-width:700px) {
+    .btn {
+     font-size: 10px;
+        }
+    
+        .btn-md {
+        font-size: 8px;
+            padding: 5px 10px;
+        }
+    
+        .btn-lg {
+    font-size: 10px;
+            padding: 15px 40px;
+          
+        }
 }
 .vendor-lister{
-width: 90%;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin: 0 auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
 .vendor-lister .vendor{
-width: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 .vendor-lister .vendor-icon{
-width: 100%;
-height: 300px;
-border:1px solid green;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-bottom: 10px;
+    width: 100%;
+    height: 300px;
+    border:1px solid green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
+
+
 .vendor-menu-search{
     width: 100%;
 }
+
+
 .vendor-menu-search input{
     padding: 10px;
     margin-bottom: 10px;
@@ -106,83 +147,218 @@ margin-bottom: 10px;
     border:none;
     outline: none;
 }
-.vendor-lister .vendor-icon img{
- max-width: 100%;
- max-height: 100%;
+
+@media screen and (max-width:700px) {
+    .vendor-lister .vendor-icon {
+        height: 100px;
+    }
+
+    .vendor-lister h1 {
+        font-size: 20px;
+    }
+    .vendor-menu-search input {
+           font-size: 10px;
+            padding: 5px;
+        }
 }
+.vendor-lister .vendor-icon img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .vendor-menu{
-width: 100%;
+    width: 100%;
 }
 .vendor-menu-lister{
-width: 100%;
-display: flex;
-flex-direction: row;
-justify-content: left;
-align-items: center;
-border-bottom: 1px solid green;
-flex-wrap: nowrap;
-overflow-x:scroll ;
-scrollbar-width: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    border-bottom: 1px solid green;
+    flex-wrap: nowrap;
+    overflow-x:scroll ;
+    scrollbar-width: 0;
 }
+
 .vendor-menu-lister::-webkit-scrollbar{
-display: none;
+    display: none;
 }
 
 .vender-menu-single-list{
-position: relative;
-width: 200px;
-height: 200px;
-text-decoration: none;
-color:#383838;
-margin-right: 10px;
-flex-shrink: 0;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    text-decoration: none;
+    color:#383838;
+    margin-right: 10px;
+    flex-shrink: 0;
 }
+
 .vender-menu-single-list:last-child{
-margin-right: 0 ;
+   margin-right: 0 ;
 }
 .vendor-menu-image{
-height: 70%;
-width: 100%;
-background: red;
+   height: 70%;
+   width: 100%;
+   background: red;
 }
 
 .vendor-menu-desc div:first-child{
-display: flex;
-justify-content: space-between;
-margin-bottom: 5px;
-padding: 0 10px;
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 5px;
+   padding: 0 10px;
 }
 .vendor-menu-desc div:nth-child(2){
-font-size: 13px;
-padding: 0 10px;
+   font-size: 13px;
+   padding: 0 10px;
 }
 .vendor-menu-lister button{
-position: absolute;
-bottom:33%;
-right:10px;
+   position: absolute;
+   bottom:33%;
+   right:10px;
+}
+.vendor-review{
+margin-top: 10px;
+}
+.vendor-review-wrapper{
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+.review-lister{
+width: 24.6%;
+}
+.review-lister :first-child{
+   font-size: 6px;
+}
+.review-lister :nth-child(2) {
+    font-size: 8px;
 }
 
+.review-lister :nth-child(3) i{
+    font-size: 8px;
+}
+@media screen and (max-width:700px) {
+    .vender-menu-single-list {
+            width: 100px;
+            height: 100px;
+            margin-right: 10px;
+        }
+       .vendor-menu-image {
+                    height: 70%;
+                    width: 100%;
+                }
+        .vendor-menu-desc div:first-child {
+        font-size: 8.5px;
+        }
+    
+        .vendor-menu-desc div:nth-child(2) {
+            font-size: 6px;
+        }
+    
+        .vendor-menu-lister button {
+          padding:1px 5px;
+          font-size: 6px;
+        }
+}
 #cart-table{
     width: 90%;
     margin: 0 auto;
     margin-top: 20px;
 }
-#cart-table tr{
-  padding:20px;
-  border-bottom: 1px solid lightgreen;
-}
-#cart-table tr:nth-child(2n){
-    background: lightgreen;
 
-  }
-#cart-table tr td{
-  padding: 5px;
+
+#cart-table tr{
+   padding:20px;
+   border-bottom: 1px solid lightgreen;
 }
+
+
+#cart-table tr:nth-child(2n){
+   background: lightgreen;
+}
+
+
+#cart-table tr td{
+   padding: 5px;
+}
+
+
 #cart-table tr td input{
     width: 50px;
     padding: 5px;
     text-align: center;
 }
+
+
 #table-footer{
     padding: 20px;
+    text-align: right;
 }
+#terms-span{
+    text-align: left;
+    font-size: 6px;
+}
+@media screen and (max-width:700px) {
+    #cart-table th {
+            font-size: 8px;
+            text-align: left;
+        }
+    #cart-table td{
+        font-size: 6px;
+    }
+   #cart-table tr td input {
+       width: 10px;
+       padding:1px  5px;
+       font-size: 6px;
+   }
+   #table-footer p{
+       font-size: 8px;
+   }
+}
+/* form css */
+
+#form-wrapper{
+    margin:0 auto;
+    width: 90%;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#form-wrapper label, #form-wrapper input, #form-wrapper textarea{
+   display: block;
+   padding: 1%;
+   width: 96%;
+}
+
+
+#form-wrapper input,#form-wrapper textarea{
+    margin-bottom: 10px;
+ }
+
+
+ #form-wrapper textarea{
+    min-height: 70px;
+ }
+
+
+ #form-wrapper button{
+    width: 99%;
+    padding:2%;
+    border:none;
+    outline:0;
+    margin-top:20px;
+ }
+
+ #form-wrapper a{
+   display:block;
+   margin-top: 20px;
+ }
+
+/* form css*/
